[Kenan A][Tasks] (#9)
* [Kenan A][Tasks]

* Izmjene da sve radi kako treba

---------

Co-authored-by: Kenan Abadzic <kenan.abadzic@tacta.io>
Co-authored-by: Benjamin1809 <benjaminhadzihasanovic@gmail.com>